/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -45,4 +45,5 @@ $\impliedby$
 - Since $\chi_{T, F}$ is irreducible, these polynomials are equal.
 - Claim: $T/F$ is diagonalizable $\iff \min_{T, F}$ splits over $F$ and is squarefree.
 - Replace $F$ with its algebraic closure, then $\min_{T, F}$ splits.
+- By (a), there are no non-trivial $T\dash$invariant subspaces of $V$.
 - Claim: $\min_{T, F}$ is squarefree.
