/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -40,10 +40,13 @@ $\impliedby$
 
 ### b
 
+Characterization of diagonalizability: $T$ is diagonalizable over $F \iff \min_{T, F}$ is squarefree in $\bar{F}[x]$?
+
 - Let $\min_{T, F}(x)$ be the minimal polynomial of $T$ and $\chi_{T, F}(x)$ be its characteristic polynomial.
 - By Cayley-Hamilton, $\min_{T, F}(x)$ divides $\chi_{T, F}$
 - Since $\chi_{T, F}$ is irreducible, these polynomials are equal.
 - Claim: $T/F$ is diagonalizable $\iff \min_{T, F}$ splits over $F$ and is squarefree.
 - Replace $F$ with its algebraic closure, then $\min_{T, F}$ splits.
-- By (a), there are no non-trivial $T\dash$invariant subspaces of $V$.
-- Claim: $\min_{T, F}$ is squarefree.
+- Claim: in characteristic zero, every irreducible polynomial is separable
+- So $\min_{T, F}$ splits into distinct linear factors
+- Thus $T$ is diagonalizable.
