/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -48,5 +48,7 @@ Characterization of diagonalizability: $T$ is diagonalizable over $F \iff \min_{
 - Claim: $T/F$ is diagonalizable $\iff \min_{T, F}$ splits over $F$ and is squarefree.
 - Replace $F$ with its algebraic closure, then $\min_{T, F}$ splits.
 - Claim: in characteristic zero, every irreducible polynomial is separable
+  - Proof: it must be the case that either $\gcd(f, f') = 1$ or $f' \equiv 0$, where the second case only happens in characteristic $p>0$.
+  - The first case is true because $\deg f' < \deg f$, and if $\gcd(f, f') = p$, then $\deg p < \deg f$ and $p\divides f$ forces $p=1$ since $f$ is irreducible.
 - So $\min_{T, F}$ splits into distinct linear factors
 - Thus $T$ is diagonalizable.
