/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/01_2020 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -8,7 +8,9 @@ Concepts used:
 - DCT
 - Weierstrass Approximation Theorem
 
-Suppose $p$ is a polynomial, then
+**Solution**:
+
+- Suppose $p$ is a polynomial, then
 \begin{align*}
 \lim_{k\to\infty} \int_0^1 kx^{k-1} p(x) \, dx
 &= \lim_{k\to\infty} \int_0^1 \qty{ \dd{}{x}x^k } p(x) \, dx \\
@@ -16,12 +18,12 @@ Suppose $p$ is a polynomial, then
 &= p(1) - \lim_{k\to\infty} \int_0^1 x^k \qty{\dd{}{x} p(x) } \, dx
 ,\end{align*}
 
-and thus it suffices to show that
+- Thus it suffices to show that
 \begin{align*}
 \lim_{k\to\infty} \int_0^1 x^k \qty{\dd{}{x} p(x) } \, dx = 0
 .\end{align*}
 
-Integrating by parts a second time yields
+- Integrating by parts a second time yields
 \begin{align*}
 \lim_{k\to\infty} 
 \int_0^1 x^k \qty{\dd{}{x} p(x) } \, dx
@@ -33,10 +35,13 @@ Integrating by parts a second time yields
 &= 0
 .\end{align*}
 
-The DCT can be applied here because $f''$ is continuous and $[0, 1]$ is compact, so $f''$ is bounded on $[0, 1]$ by a constant $M$ and $\int_0^1 \abs{x^k f''(x)} \leq \int_0^1 1\cdot M = M < \infty$.
+  - The DCT can be applied here because $f''$ is continuous and $[0, 1]$ is compact, so $f''$ is bounded on $[0, 1]$ by a constant $M$ and 
+  $$\int_0^1 \abs{x^k f''(x)} \leq \int_0^1 1\cdot M = M < \infty.$$
 
-We now use the Weierstrass approximation theorem: if $f: [a, b] \to \RR$ is continuous, then for every $\eps>0$ there exists a polynomial $p_\eps(x)$ such that $\norm{f - p_\eps}_\infty < \eps$.
-Thus 
+- Now use the Weierstrass approximation theorem: 
+  - If $f: [a, b] \to \RR$ is continuous, then for every $\eps>0$ there exists a polynomial $p_\eps(x)$ such that $\norm{f - p_\eps}_\infty < \eps$.
+
+- Thus 
 \begin{align*}
 \abs{ \int_0^1 kx^{k-1} p_\eps(x)\,dx - \int_0^1 kx^{k-1}f(x)\,dx  } 
 &= \abs{ \int_0^1 kx^{k-1} \qty{p_\eps(x) - f(x)} \,dx  } \\
@@ -46,8 +51,10 @@ Thus
 &= \norm{p_\eps-f}_\infty \converges{\eps\to 0}\to 0
 \end{align*}
 
-and the integrals are equal. 
-Finally, the $\int_0^1 kx^{k-1} p_\eps(x) \,dx = p_\eps(1)$ for each $\eps$ by the first argument, and $p_\eps(1) \converges{\eps\to 0}\to f(1)$ since uniform convergence implies pointwise convergence.
+  and the integrals are equal. 
+
+- By the first argument, $$\int_0^1 kx^{k-1} p_\eps(x) \,dx = p_\eps(1) \text{ for each } \eps$$ 
+- Since uniform convergence implies pointwise convergence, $p_\eps(1) \converges{\eps\to 0}\to f(1)$.
 
 
 ## 2
@@ -56,48 +63,54 @@ Concepts used:
 
 - Definition of outer measure: $m_*(E) = \inf_{\theset{Q_j} \covers E} \sum \abs {Q_j}$ where $\theset{Q_j}$ is a countable collection of closed cubes.
 - Break $\RR$ into $\disjoint_{n\in \ZZ} [n, n+1)$, each with finite measure.
+- Theorem: $m_*(Q) = \abs{Q}$ for $Q$ a closed cube (i.e. the outer measure equals the volume).
+
+> Proof of theorem: if $Q$ is a closed cube, then $m_*(Q) = \abs{Q}$, the usual volume.
+>
+> - $m_*(Q) \leq \abs{Q}$:
+  > - Since $Q\subseteq Q$, $Q\covers Q$ and $m_*(Q) \leq \abs{Q}$ since $m_*$ is an infimum over such coverings.
+> - $m_*(Q) \geq \abs{Q}$: 
+>   - Equivalently, show $\abs{Q} \leq m_*(Q) + \eps$ for every $\eps> 0$.
+>   - Let $\theset{Q_i}_{i=1}^\infty \covers Q$ be arbitrary, it suffices to show that 
+    $$\abs{Q} \leq \qty{\sum_{i=1}^\infty \abs{Q_i}} + \eps.$$
+>   -  Pick open cubes $S_i$ such that $\abs{Q_i} \leq \abs{S_i} \leq (1+\eps)\abs{Q_i}$.
+>   - Then $\theset{S_i} \covers Q$, so by compactness of $Q$ pick a finite subcover with $N$ elements.
+>   - Conclude with 
+\begin{align*}
+Q \subseteq \union_{i=1}^N S_i \implies \abs{Q} \leq \sum_{i=1}^N \abs{S_i} \leq \sum_{i=1}^N (1+\eps) \abs{Q_j} \leq (1+\eps)\sum_{i=1}^\infty \abs{Q_i } \converges{\eps\to0}\to \sum_{i=1}^\infty \abs{Q_i}
+.\end{align*}
+>   (Or note that taking an infimum over coverings on the RHS preserves the inequality.)
+
 
 ### a
 
-Suppose $N \definedas m_*(E) < \infty$.
+- Suppose $N \definedas m_*(E) < \infty$.
 
-Since $m_*(E)$ is an infimum, by definition, for every $\eps> 0$ there exists a covering by closed cubes $\theset{Q_i(\eps)}_{i=1}^\infty \covers E$ depending on $\eps$ such that 
+- Since $m_*(E)$ is an infimum, by definition, for every $\eps> 0$ there exists a covering by closed cubes $\theset{Q_i(\eps)}_{i=1}^\infty \covers E$ depending on $\eps$ such that 
 $$
 \sum_{i=1}^\infty \abs{Q_i(\eps)} < N + \eps
 .$$
 
-For each fixed $n$, set $\eps_n = {1\over n}$ to produce such a covering $\theset{Q_i(\eps_n)}_{i=1}^\infty$ and set $B_n \definedas \union_{i=1}^\infty Q_i(\eps_n)$.
-Then (theorem) the outer measure of cubes is *equal* to the sum of their volumes, so 
+- For each fixed $n$, set $\eps_n = {1\over n}$ to produce such a covering $\theset{Q_i(\eps_n)}_{i=1}^\infty$ and set $B_n \definedas \union_{i=1}^\infty Q_i(\eps_n)$.
+
+- Then (theorem) the outer measure of cubes is *equal* to the sum of their volumes, so 
 \begin{align*}
 m_*(B_n) = \sum_{i=1}^\infty \abs{Q_i(\eps_n)} < N + \eps_n = N + {1\over n}
 .\end{align*}
 
-Now set $B \definedas \intersect_{n=1}^\infty B_n$.
+- Now set $B \definedas \intersect_{n=1}^\infty B_n$.
 
-- Since $E\subseteq B_n$ for every $n$, $E\subseteq B$
-- Since $B$ is a countable intersection of countable unions of closed sets, $B$ is Borel.
-- Since $B_n \subseteq B$ for every $n$, we can apply subadditivity to obtain the inequality
-\begin{align*}
-E \subseteq B \subseteq B_n \implies
-N \leq m_*(B) \leq m_*(B_n) < N + {1\over n} \qtext{for all} n\in \ZZ^{\geq 1}
-.\end{align*}
+  - Since $E\subseteq B_n$ for every $n$, $E\subseteq B$
+  - Since $B$ is a countable intersection of countable unions of closed sets, $B$ is Borel.
+  - Since $B_n \subseteq B$ for every $n$, we can apply subadditivity to obtain the inequality
+  \begin{align*}
+  E \subseteq B \subseteq B_n \implies
+  N \leq m_*(B) \leq m_*(B_n) < N + {1\over n} \qtext{for all} n\in \ZZ^{\geq 1}
+  .\end{align*}
 
-This forces $m_*(E) = m_*(B)$.
+- This forces $m_*(E) = m_*(B)$.
 
-If $m_*(E) = \infty$, then take $B = \RR^n$ since $m(\RR^n) = \infty$.
-
-> Proof of theorem: if $Q$ is a closed cube, then $m_*(Q) = \abs{Q}$, the usual volume.
->
-> - Since $Q\subseteq Q$, $Q\covers Q$ and $m_*(Q) \leq \abs{Q}$ since $m_*$ is an infimum over such coverings.
-> - Other direction: show $\abs{Q} \leq m_*(Q) + \eps$ for every $\eps> 0$.
-> - Let $\theset{Q_i} \covers Q$ be arbitrary, it suffices to show that $$\abs{Q} \leq \qty{\sum \abs{Q_i}} + \eps.$$
-> - Pick open cubes $S_i$ such that $\abs{Q_i} \leq \abs{S_i} \leq (1+\eps)\abs{Q_i}$.
-> - Then $\theset{S_i} \covers Q$, so by compactness pick a finite subcover of size $N$
-> - Conclude with 
-\begin{align*}
-Q \subseteq \union_{i=1}^N S_i \implies \abs{Q} \leq \sum_{i=1}^N \abs{S_i} \leq \sum_{i=1}^N (1+\eps) \abs{Q_j} \leq (1+\eps)\sum_{i=1}^\infty \abs{Q_i } \converges{\eps\to0}\to \sum_{i=1}^\infty \abs{Q_i}
-.\end{align*}
-> - (Or note that taking an infimum over coverings on the RHS preserves the inequality.)
+- If $m_*(E) = \infty$, then take $B = \RR^n$ since $m(\RR^n) = \infty$.
 
 ### b
 
