--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -73,7 +73,7 @@ Concepts used:
 >   - Equivalently, show $\abs{Q} \leq m_*(Q) + \eps$ for every $\eps> 0$.
 >   - Let $\theset{Q_i}_{i=1}^\infty \covers Q$ be arbitrary, it suffices to show that 
     $$\abs{Q} \leq \qty{\sum_{i=1}^\infty \abs{Q_i}} + \eps.$$
->   -  Pick open cubes $S_i$ such that $\abs{Q_i} \leq \abs{S_i} \leq (1+\eps)\abs{Q_i}$.
+>   -  Pick open cubes $S_i$ such that $Q_i\subseteq S_i$ and $\abs{Q_i} \leq \abs{S_i} \leq (1+\eps)\abs{Q_i}$.
 >   - Then $\theset{S_i} \covers Q$, so by compactness of $Q$ pick a finite subcover with $N$ elements.
 >   - Conclude with 
 \begin{align*}
