--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -79,7 +79,7 @@ Concepts used:
 \begin{align*}
 Q \subseteq \union_{i=1}^N S_i \implies \abs{Q} \leq \sum_{i=1}^N \abs{S_i} \leq \sum_{i=1}^N (1+\eps) \abs{Q_j} \leq (1+\eps)\sum_{i=1}^\infty \abs{Q_i } \sum_{i=1}^\infty \abs{Q_i}
 .\end{align*}
->   (Or note that taking an infimum over coverings on the RHS preserves the inequality.)
+> - Now taking an infimum over coverings on the RHS preserves the inequality.
 
 
 ### a
