--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -65,21 +65,23 @@ Concepts used:
 - Break $\RR$ into $\disjoint_{n\in \ZZ} [n, n+1)$, each with finite measure.
 - Theorem: $m_*(Q) = \abs{Q}$ for $Q$ a closed cube (i.e. the outer measure equals the volume).
 
-> Proof of theorem: if $Q$ is a closed cube, then $m_*(Q) = \abs{Q}$, the usual volume.
->
-> - $m_*(Q) \leq \abs{Q}$:
->   - Since $Q\subseteq Q$, $Q\covers Q$ and $m_*(Q) \leq \abs{Q}$ since $m_*$ is an infimum over such coverings.
-> - $\abs{Q} \leq m_*(Q)$:
->   - Equivalently, show $\abs{Q} \leq m_*(Q) + \eps$ for every $\eps> 0$.
->   - Let $\theset{Q_i}_{i=1}^\infty \covers Q$ be arbitrary, it suffices to show that 
-    $$\abs{Q} \leq \qty{\sum_{i=1}^\infty \abs{Q_i}} + \eps.$$
->   -  Pick open cubes $S_i$ such that $Q_i\subseteq S_i$ and $\abs{Q_i} \leq \abs{S_i} \leq (1+\eps)\abs{Q_i}$.
->   - Then $\theset{S_i} \covers Q$, so by compactness of $Q$ pick a finite subcover with $N$ elements.
->   - Conclude with 
-\begin{align*}
-Q \subseteq \union_{i=1}^N S_i \implies \abs{Q} \leq \sum_{i=1}^N \abs{S_i} \leq \sum_{i=1}^N (1+\eps) \abs{Q_j} \leq (1+\eps)\sum_{i=1}^\infty \abs{Q_i } 
-.\end{align*}
-> - Now taking an infimum over coverings on the RHS preserves the inequality.
+Proof (of Theorem)
+:   Proof of theorem: if $Q$ is a closed cube, then $m_*(Q) = \abs{Q}$, the usual volume.
+
+    - $m_*(Q) \leq \abs{Q}$:
+      - Since $Q\subseteq Q$, $Q\covers Q$ and $m_*(Q) \leq \abs{Q}$ since $m_*$ is an infimum over such coverings.
+    - $\abs{Q} \leq m_*(Q)$:
+      - Equivalently, show $\abs{Q} \leq m_*(Q) + \eps$ for every $\eps> 0$.
+      - Let $\theset{Q_i}_{i=1}^\infty \covers Q$ be arbitrary, it suffices to show that 
+          $$\abs{Q} \leq \qty{\sum_{i=1}^\infty \abs{Q_i}} + \eps.$$
+      -  Pick open cubes $S_i$ such that $Q_i\subseteq S_i$ and $\abs{Q_i} \leq \abs{S_i} \leq (1+\eps)\abs{Q_i}$.
+      - Then $\theset{S_i} \covers Q$, so by compactness of $Q$ pick a finite subcover with $N$ elements.
+
+      - Conclude with 
+      \begin{align*}
+      Q \subseteq \union_{i=1}^N S_i \implies \abs{Q} \leq \sum_{i=1}^N \abs{S_i} \leq \sum_{i=1}^N (1+\eps) \abs{Q_j} \leq (1+\eps)\sum_{i=1}^\infty \abs{Q_i } 
+      .\end{align*}
+      - Now taking an infimum over coverings on the RHS preserves the inequality.
 
 
 ### a
