/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/01_2020 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -66,7 +66,7 @@ Concepts used:
 - Theorem: $m_*(Q) = \abs{Q}$ for $Q$ a closed cube (i.e. the outer measure equals the volume).
 
 Proof (of Theorem)
-:   Proof of theorem: if $Q$ is a closed cube, then $m_*(Q) = \abs{Q}$, the usual volume.
+:   Statement: if $Q$ is a closed cube, then $m_*(Q) = \abs{Q}$, the usual volume.
 
     - $m_*(Q) \leq \abs{Q}$:
       - Since $Q\subseteq Q$, $Q\covers Q$ and $m_*(Q) \leq \abs{Q}$ since $m_*$ is an infimum over such coverings.
