--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -71,21 +71,24 @@ Proof (of Theorem)
     - $m_*(Q) \leq \abs{Q}$:
       - Since $Q\subseteq Q$, $Q\covers Q$ and $m_*(Q) \leq \abs{Q}$ since $m_*$ is an infimum over such coverings.
     - $\abs{Q} \leq m_*(Q)$:
-      - Equivalently, show $\abs{Q} \leq m_*(Q) + \eps$ for every $\eps> 0$.
+      - Fix $\eps > 0$.
       - Let $\theset{Q_i}_{i=1}^\infty \covers Q$ be arbitrary, it suffices to show that 
           $$\abs{Q} \leq \qty{\sum_{i=1}^\infty \abs{Q_i}} + \eps.$$
       -  Pick open cubes $S_i$ such that $Q_i\subseteq S_i$ and $\abs{Q_i} \leq \abs{S_i} \leq (1+\eps)\abs{Q_i}$.
       - Then $\theset{S_i} \covers Q$, so by compactness of $Q$ pick a finite subcover with $N$ elements.
 
-      - Conclude with 
+      - Note 
       \begin{align*}
       Q \subseteq \union_{i=1}^N S_i \implies \abs{Q} \leq \sum_{i=1}^N \abs{S_i} \leq \sum_{i=1}^N (1+\eps) \abs{Q_j} \leq (1+\eps)\sum_{i=1}^\infty \abs{Q_i } 
       .\end{align*}
-      - Now taking an infimum over coverings on the RHS preserves the inequality.
+      - Taking an infimum over coverings on the RHS preserves the inequality, so 
+        $$\abs{Q} \leq (1+\eps) m_*(Q)$$
+      - Take $\eps\to 0$ to obtain final inequality.
 
 
 ### a
 
+- If $m_*(E) = \infty$, then take $B = \RR^n$ since $m(\RR^n) = \infty$.
 - Suppose $N \definedas m_*(E) < \infty$.
 
 - Since $m_*(E)$ is an infimum, by definition, for every $\eps> 0$ there exists a covering by closed cubes $\theset{Q_i(\eps)}_{i=1}^\infty \covers E$ depending on $\eps$ such that 
@@ -95,7 +98,7 @@ $$
 
 - For each fixed $n$, set $\eps_n = {1\over n}$ to produce such a covering $\theset{Q_i(\eps_n)}_{i=1}^\infty$ and set $B_n \definedas \union_{i=1}^\infty Q_i(\eps_n)$.
 
-- Then (theorem) the outer measure of cubes is *equal* to the sum of their volumes, so 
+- The outer measure of cubes is *equal* to the sum of their volumes, so 
 \begin{align*}
 m_*(B_n) = \sum_{i=1}^\infty \abs{Q_i(\eps_n)} < N + \eps_n = N + {1\over n}
 .\end{align*}
@@ -112,7 +115,6 @@ m_*(B_n) = \sum_{i=1}^\infty \abs{Q_i(\eps_n)} < N + \eps_n = N + {1\over n}
 
 - This forces $m_*(E) = m_*(B)$.
 
-- If $m_*(E) = \infty$, then take $B = \RR^n$ since $m(\RR^n) = \infty$.
 
 ### b
 
@@ -130,20 +132,21 @@ m_*(E) - m_*(E) &= m_*(B\setminus E) \qquad\qquad\text{since } m_*(E) < \infty \
 - So take $N = B\setminus E$; this shows $m_*(N) = 0$ and $E = B\setminus (B\setminus E) = B\setminus N$.
 
 
-- If $m_*(E) = \infty$
-  - Apply result to $E_R\definedas E \intersect [R, R+1)^n \subset \RR^n$ for $R\in \ZZ$, so $E = \disjoint_R E_R$
-  - Obtain $B_R, N_R$ such that $E_R = B_R \setminus N_R$, $m_*(E_R) = m_*(B_R)$, and $m_*(N_R) = 0$.
-  - Note that
-    -   $B\definedas \union_R B_R$ is a union of Borel sets and thus still Borel
-    -  $E = \union_R E_R$
-    - $N\definedas B\setminus E$
-    - $N' \definedas \union_R N_R$ is a union of null sets and thus still null
-  - Since $E_R \subset B_R$ for every $R$, we have $E\subset B$
-  - We can compute
-  \begin{align*}
+If $m_*(E) = \infty$:
+
+- Apply result to $E_R\definedas E \intersect [R, R+1)^n \subset \RR^n$ for $R\in \ZZ$, so $E = \disjoint_R E_R$
+- Obtain $B_R, N_R$ such that $E_R = B_R \setminus N_R$, $m_*(E_R) = m_*(B_R)$, and $m_*(N_R) = 0$.
+- Note that
+  -   $B\definedas \union_R B_R$ is a union of Borel sets and thus still Borel
+  -  $E = \union_R E_R$
+  - $N\definedas B\setminus E$
+  - $N' \definedas \union_R N_R$ is a union of null sets and thus still null
+- Since $E_R \subset B_R$ for every $R$, we have $E\subset B$
+- We can compute
+\begin{align*}
 N = B\setminus E = \qty{ \union_R B_R } \setminus \qty{\union_R E_R } \subseteq \union_R \qty{B_R\setminus E_R} = \union_R N_R \definedas N'
-  \end{align*}
-  where $m_*(N') = 0$ since $N'$ is null, and thus subadditivity forces $m_*(N) = 0$.
+\end{align*}
+where $m_*(N') = 0$ since $N'$ is null, and thus subadditivity forces $m_*(N) = 0$.
 
 ## 3
 
