--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -153,8 +153,8 @@ where $m_*(N') = 0$ since $N'$ is null, and thus subadditivity forces $m_*(N) = 
 Concepts used:
 
 - Limits
-- Cauchy Criterion for Integrals: $\int_a^\infty f(x) \,dx$ converges iff for every $\eps>0$ there exists an $M_0$ such that $A,B\geq M_0$ implies $\abs{\int_A^B f} < \eps$.
-- Integrals of $L^1$ functions have vanishing tails.
+- Cauchy Criterion for Integrals: $\int_a^\infty f(x) \,dx$ converges iff for every $\eps>0$ there exists an $M_0$ such that $A,B\geq M_0$ implies $\abs{\int_A^B f} < \eps$, i.e. $\abs{\int_A^B f} \converges{A\to\infty}\to 0$.
+- Integrals of $L^1$ functions have vanishing tails: $\int_{N}^\infty \abs{f} \converges{N\to\infty}\to 0$.
 - Mean Value Theorem for Integrals: $\int_a^b f(t)\, dt = (b-a) f(c)$ for some $c\in [a, b]$.
 
 ### a
