/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/01_2020 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -179,7 +179,7 @@ N\geq N_0 \implies \int_{\abs x > N} \abs{f} &= \int_{\abs x > N} \abs{f - f_n +
 
 To see that this doesn't force $f(x)\to 0$ as $\abs{x} \to \infty$:
 
-- Take $f(x)$ to be a train of boxes of height 1 and area $1/2^j$ centered on even integers.
+- Take $f(x)$ to be a train of rectangles of height 1 and area $1/2^j$ centered on even integers.
 - Then $$\int_{\abs x > N} \abs{f} = \sum_{j=N}^\infty 1/2^j \converges{N\to\infty}\to 0$$ as the tail of a convergent sum. 
 - However $f(x) = 1$ for infinitely many even integers $x > N$, so $f(x) \not\to 0$ as $\abs{x}\to\infty$.
 
