/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/01_2020 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -205,9 +205,9 @@ f(x-n) \int_x^{2x} \,dt  \\
 .\end{align*}
 
 - By the Cauchy Criterion for integrals, $\lim_{x\to \infty} \int_x^{2x} f(t)~dt = 0$.
-- So the LHS term $\lim_{x\to \infty} xf(x) = 0$.
+- So the LHS term $xf(x) \converges{x\to\infty}\to 0$.
 - Since $x>1$, $\abs{f(x)} \leq \abs{xf(x)}$ 
-- Thus $f(x) \to 0$ as well.
+- Thus $f(x) \converges{x\to\infty}\to 0$ as well.
 
 #### Solution 2 (Variation on the Trick)
 
