/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/01_2020 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -328,8 +328,8 @@ Relevant concepts:
 &\leq \int_\RR \qty{ \int_\RR \abs{f(y)g(x-y)}  \, dy } \, dx \\
 &= \int_\RR \qty{ \int_\RR \abs{f(y)g(x-y)}  \, dx} \, dy \quad\text{by Tonelli} \\
 &= \int_\RR \qty{ \int_\RR \abs{f(y)g(t)}  \, dt} \, dy \quad\text{setting } t=x-y, \,dt = - dx \\
-&= \int_\RR \qty{ \int_\RR \abs{f(y)}\abs{g(t)}  \, dt}\, dy \\
-&= \int_\RR \abs{f(y)} \qty{ \int_\RR \abs{g(t)}  \, dt}\, dy \\
+&= \int_\RR \qty{ \int_\RR \abs{f(y)}\cdot \abs{g(t)}  \, dt}\, dy \\
+&= \int_\RR \abs{f(y)} \cdot \qty{ \int_\RR \abs{g(t)}  \, dt}\, dy \\
 &\definedas \int_\RR \abs{f(y)} \cdot \norm{g}_1 \,dy \\
 &= \norm{g}_1 \int_\RR \abs{f(y)} \,dy \\
 &\definedas \norm{g}_1 \norm{f}_1  \\
