/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -1,24 +1,32 @@
----
-title: Exams 2 Review
----
-
-# Exam 2 (Practice)
-
-Proving uniform continuity: show
-$$
-\norm{f - \tau_h f}_1 \mapsvia{h\to 0} 0
-$$
-
-Notation: $C_0$ is the set of functions that vanish at infinity.
+# Practice Exam 2 (November 2014)
 
 ## 1: Fubini-Tonelli
 
+### a
+
+Carefully state Tonelli's theorem for a nonnegative function $F(x, t)$ on $\RR^n\cross \RR$.
+
 ### b
+
+Let $f:\RR^n\to [0, \infty]$ and define
+\begin{align*}
+\mca \definedas \theset{(x, t) \in \RR^n\cross \RR \suchthat 0\leq t \leq f(x)}
+.\end{align*}
+
+Prove the validity of the following two statements:
+
+1. $f$ is Lebesgue measurable on $\RR^{n} \iff \mca$ is a Lebesgue measurable subset of $\RR^{n+1}$.
+2. If $f$ is Lebesgue measurable on $\RR^n$ then
+\begin{align*}
+m(\mathcal{A})=\int_{\mathbb{R}^{n}} f(x) d x=\int_{0}^{\infty} m\left(\left\{x \in \mathbb{R}^{n}\suchthat f(x) \geq t\right\}\right) d t
+.\end{align*}
+
+**Solution**
 
 - Define $A_y = \theset{x\in \RR^n \mid (x, y) \in A}$, and notice that $A_y = \theset{x\in \RR^n \mid 0\leq y \leq f(x)}$.
 - By the corollary, $A_y$ is measurable and 
 $$
-m(\mathcal{A})=\int m\left(\mathcal{A}_{y}\right) d y=\int_{0}^{y} m\left(\left\{x \in \mathbb{R}^{n} \ni f(x) \geq y\right\}\right) d y
+m(\mathcal{A})=\int m\left(\mathcal{A}_{y}\right) d y=\int_{0}^{y} m\left(\left\{x \in \mathbb{R}^{n} \suchthat f(x) \geq y\right\}\right) d y
 $$
 
 ## 2: Convolutions and the Fourier Transform
