/ ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -38,17 +38,9 @@ Prove that if $f, g$ are integrable and bounded, then
 
 ### c
 
-**Facts:**
-
-- *Riemann-Lebesgue lemma:* $\hat{f}$ vanishes at infinity
-
-**Theorem (Fourier Inversion):**
-\begin{align*}
-f(x)=\int_{\mathbb{R}^{n}} \widehat{f}(x) e^{2 \pi i x \cdot \xi} d \xi
-.\end{align*}
-
-*Proof:*
-Idea: Fubini-Tonelli doesn't work directly, so introduce a convergence factor, take limits, and use uniqueness of limits.
+1. Define the *Fourier transform* of an integrable function $f$ on $\RR^n$.
+2. Give an outline of the proof of the Fourier inversion formula.
+3. Give an example of a function $f\in L^1(\RR^n)$ such that $\hat{f}$ is not in $L^1(\RR^n)$.
 
 Use the following facts:
 
