/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -66,15 +66,25 @@ Let $\theset{a_n}_{n\in \NN} \in \ell^2(\NN)$ and prove that there exists an $x\
 \norm{x}_H = \qty{ \sum_{n\in \NN} \abs{a_n}^2}^{1\over 2}
 .\end{align*}
 
-- Take $\theset{a_n} \in \ell^2$, then note that $\sum \abs{a_n}^2 < \infty \implies$ the tails vanish.
+Proof
+:   \hfill
 
-- Define $x = \displaystyle\lim_{N\to\infty} S_N$ where $S_N = \sum_{k=1}^N a_k u_k$
+    - Take $\theset{a_n} \in \ell^2$, then note that $\sum \abs{a_n}^2 < \infty \implies$ the tails vanish.
 
-- $\theset{S_N}$ is Cauchy and $H$ is complete, so $x\in H$.
+    - Define $x \definedas \displaystyle\lim_{N\to\infty} S_N$ where $S_N = \sum_{k=1}^N a_k u_k$
 
-- By construction, $\inner{x}{u_n} = \inner{\sum_k a_k u_k}{u_n} = \sum_k a_k \inner{u_k}{u_n} = a_n$ since the $u_k$ are all orthogonal.
+    - $\theset{S_N}$ is Cauchy and $H$ is complete, so $x\in H$.
 
-- $\norm{x}^2 = \norm{\sum_k a_k u_k}^2 = \sum_k \norm{a_k u_k}^2 = \sum_k \abs{a_k}^2$ by Pythagoras since the $u_k$ are normal.
+    - By construction, 
+    \begin{align*}
+    \inner{x}{u_n} = \inner{\sum_k a_k u_k}{u_n} = \sum_k a_k \inner{u_k}{u_n} = a_n 
+    \end{align*}
+    since the $u_k$ are all orthogonal.
+    
+    - By Pythagoras since the $u_k$ are normal,
+    \begin{align*}
+    \norm{x}^2 = \norm{\sum_k a_k u_k}^2 = \sum_k \norm{a_k u_k}^2 = \sum_k \abs{a_k}^2
+    .\end{align*}
 
 ### c
 Let $x$ and $u_n$ be arbitrary. Then
