/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -55,7 +55,7 @@ Let $x\in H$ and verify that
 .\end{align*}
 for any $N\in \NN$ and deduce that
 \begin{align*}
-\sum_{n=1}^{\infty}\left|\left\langle x, u_{n}\right\rangle\right|^{2} \leq\|x\|^{2}
+\sum_{n=1}^{\infty}\left|\left\langle x, u_{n}\right\rangle\right|^{2} \leq\|x\|_H^{2}
 .\end{align*}
 
 
