/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’ / ‘Real Analysis/Review Doc/sections/5_Functional Analysis.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -89,33 +89,36 @@ Proof
     .\end{align*}
 
 ### c
-Let $x$ and $u_n$ be arbitrary. Then
+Prove that if $\theset{u_n}$ is *complete*, Bessel's inequality becomes an equality.
 
-\begin{align*}
-\inner{x - \sum_{k=1}^\infty \inner{x}{u_k}u_k }{u_n}
-&=
-\inner{x}{u_n}
--
-\inner{\sum_{k=1}^\infty \inner{x}{u_k}u_k }{u_n} \\
-&=
-\inner{x}{u_n}
--
-\sum_{k=1}^\infty  \inner{\inner{x}{u_k}u_k }{u_n} \\
-&=
-\inner{x}{u_n}
--
-\sum_{k=1}^\infty  \inner{x}{u_k} \inner{u_k }{u_n} \\
-&= \inner{x}{u_n} - \inner{x}{u_n} = 0 \\
-\implies 
-x - \sum_{k=1}^\infty \inner{x}{u_k}u_k &= 0 \quad\text{by completeness}
-.\end{align*}
+Proof
+:   Let $x$ and $u_n$ be arbitrary. 
 
-So 
-$$
-x = \sum_{k=1}^\infty \inner{x}{u_k} u_k
-\implies
-\norm{x}^2 = \sum_{k=1}^\infty \abs{\inner{x}{u_k}}^2. \qed
-$$
+    \begin{align*}
+    \inner{x - \sum_{k=1}^\infty \inner{x}{u_k}u_k }{u_n}
+    &=
+    \inner{x}{u_n}
+    -
+    \inner{\sum_{k=1}^\infty \inner{x}{u_k}u_k }{u_n} \\
+    &=
+    \inner{x}{u_n}
+    -
+    \sum_{k=1}^\infty  \inner{\inner{x}{u_k}u_k }{u_n} \\
+    &=
+    \inner{x}{u_n}
+    -
+    \sum_{k=1}^\infty  \inner{x}{u_k} \inner{u_k }{u_n} \\
+    &= \inner{x}{u_n} - \inner{x}{u_n} = 0 \\
+    \implies 
+    x - \sum_{k=1}^\infty \inner{x}{u_k}u_k &= 0 \quad\text{by completeness}
+    .\end{align*}
+
+    So 
+    \begin{align*}
+    x = \sum_{k=1}^\infty \inner{x}{u_k} u_k
+    \implies
+    \norm{x}^2 = \sum_{k=1}^\infty \abs{\inner{x}{u_k}}^2. \qed
+    .\end{align*}
 
 
 ## 4: Lp Spaces
