/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -241,9 +241,13 @@ Solution:
 
 ## 5: Dual Spaces
 
+Let $X$ be a normed vector space.
+
 ### a
+Give the definition of what it means for a map $L:X\to \CC$ to be a *linear functional.
 
 ### b
+Prove Minkowski's Inequality:
 
 ### c
 
