/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’ / ‘Real Analysis/Review Doc/sections/99_9_Appendix_Inequalities.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -244,10 +244,13 @@ Solution:
 Let $X$ be a normed vector space.
 
 ### a
-Give the definition of what it means for a map $L:X\to \CC$ to be a *linear functional.
+Give the definition of what it means for a map $L:X\to \CC$ to be a *linear functional*.
 
 ### b
 Prove Minkowski's Inequality:
+\begin{align*}
+1\leq p < \infty \implies \pnorm{f+g}{p} \leq \pnorm{f}{p}+ \pnorm{g}{p}
+.\end{align*}
 
 ### c
 
