/ ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -251,9 +251,21 @@ Prove Minkowski's Inequality:
 \begin{align*}
 1\leq p < \infty \implies \pnorm{f+g}{p} \leq \pnorm{f}{p}+ \pnorm{g}{p}
 .\end{align*}
+Conclude that if $f, g\in L^p(\RR^n)$ then so is $f+g$.
 
 ### c
+Let $X = [0, 1] \subset \RR$.
 
+1. Give a definition of the Banach space $L^\infty(X)$ of essentially bounded functions of $X$.
+
+2. Let $f$ be non-negative and measurable on $X$, and prove that
+\begin{align*}
+\int_X f(x)^p \,dx \converges{p\to\infty}
+\begin{dcases}
+\infty & \text{or}\\
+m(\theset{f\inv(1)}) &
+\end{dcases}
+.\end{align*}
 
 
 
