/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -129,13 +129,6 @@ Proof
 
 ### c
 
-**Definition (Infinity Norm):**
-
-\begin{align*}
-L^\infty(X) &= \theset{f: X \to \CC \suchthat \norm{f}_\infty < \infty} \\
-&\text{where} \\
-\norm{f}_\infty &= \inf_{\alpha \geq 0} \theset{\alpha \suchthat m\theset{\abs{f} \geq \alpha} = 0}
-.\end{align*}
 
 **Theorem:**
 \begin{align*}
@@ -164,8 +157,8 @@ We also have
 
 > Note: this doesn't help with this problem at all.
 
-Solution:
-
+Proof
+:
 \begin{align*}
 \int f^p 
 &= \int_{x \leq 1} f^p + \int_{x=1}f^p + \int_{x\geq 1} f^p\\
@@ -177,7 +170,6 @@ Solution:
 \infty & m(\theset{x\geq 1}) > 0.
 \end{cases}
 \end{align*}
-
 
 
 ## 5: Dual Spaces
