/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’ / ‘Real Analysis/Review Doc/sections/3_Integration.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -127,58 +127,6 @@ Proof
 ### a
 ?
 
-### c
-
-
-**Theorem:**
-\begin{align*}
-m(X) < \infty \implies \lim_{p\to\infty} \norm{f}_p = \norm{f}_\infty 
-.\end{align*}
-
-*Proof:*
-Let $M = \norm{f}_\infty$.
-For any $L < M$, let $S = \theset{\abs{f} \geq L}$. Then $m(S) > 0$ and
-
-\begin{align*}
-\norm{f}_p &= \left( \int_X \abs{f}^p \right)^{\frac 1 p} \\
-&\geq \left( \int_S \abs{f}^p \right)^{\frac 1 p} \\
-&\geq L ~m(S)^{\frac 1 p} \mapsvia{p\to\infty} L \\
-&\implies \liminf_p \norm{f}_p \geq M
-.\end{align*}
-
-We also have
-\begin{align*}
-\norm{f}_p 
-&=  \left( \int_X \abs{f}^p \right)^{\frac 1 p} \\
-&\leq \left( \int_X M^p \right)^{\frac 1 p} \\
-&= M ~m(X)^{\frac 1 p} \mapsvia{p\to\infty} M \\
-&\implies \limsup_p \norm{f}_p \leq M \qed
-.\end{align*}
-
-> Note: this doesn't help with this problem at all.
-
-Proof
-:
-\begin{align*}
-\int f^p 
-&= \int_{x \leq 1} f^p + \int_{x=1}f^p + \int_{x\geq 1} f^p\\
-&= \int_{x \leq 1} f^p + \int_{x=1}1 + \int_{x\geq 1} f^p \\
-&= \int_{x \leq 1} f^p + m(\theset{f = 1}) + \int_{x\geq 1} f^p \\
-&\mapsvia{p\to\infty} 0  + m(\theset{f = 1}) + 
-\begin{cases} 
-0 & m(\theset{x\geq 1}) = 0 \\ 
-\infty & m(\theset{x\geq 1}) > 0.
-\end{cases}
-\end{align*}
-
-
-## 5: Dual Spaces
-
-Let $X$ be a normed vector space.
-
-### a
-Give the definition of what it means for a map $L:X\to \CC$ to be a *linear functional*.
-
 ### b
 Prove Minkowski's Inequality:
 \begin{align*}
@@ -194,10 +142,41 @@ Let $X = [0, 1] \subset \RR$.
 2. Let $f$ be non-negative and measurable on $X$, prove that
 \begin{align*}
 \int_X f(x)^p \,dx \converges{p\to\infty}\to
-\infty \qtext{or}
-m(\theset{f\inv(1)}) 
+\begin{dcases}
+\infty \quad\text{or} \\
+m\qty{\theset{f\inv(1)}}
+\end{dcases}
 ,\end{align*}
 and characterize the functions of each type
+
+Proof
+:
+\begin{align*}
+\int f^p 
+&= \int_{x \leq 1} f^p + \int_{x=1}f^p + \int_{x\geq 1} f^p\\
+&= \int_{x \leq 1} f^p + \int_{x=1}1 + \int_{x\geq 1} f^p \\
+&= \int_{x \leq 1} f^p + m(\theset{f = 1}) + \int_{x\geq 1} f^p \\
+&\converges{p\to\infty}\to 0  + m(\theset{f = 1}) + 
+\begin{cases} 
+0 & m(\theset{x\geq 1}) = 0 \\ 
+\infty & m(\theset{x\geq 1}) > 0.
+\end{cases}
+\end{align*}
+
+
+## 5: Dual Spaces
+
+Let $X$ be a normed vector space.
+
+### a
+Give the definition of what it means for a map $L:X\to \CC$ to be a *linear functional*.
+
+### b
+Define what it means for $L$ to be *bounded* and show $L$ is bounded $\iff L$ is continuous.
+
+
+### c
+Prove that $(X\dual, \norm{\wait}_{\op})$ is a Banach space.
 
 # Qual: Fall 2019
 
