/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md’ / ‘Real Analysis/Review Doc/sections/99_9_Appendix_Inequalities.md’

--- a/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/100_Fall_2019_Exam_2.md
@@ -125,7 +125,11 @@ Proof
 
 
 ### a
-?
+Prove Holder's inequality:
+let $f\in L^p, g\in L^q$ with $p, q$ conjugate, and show that
+\begin{align*}
+\pnorm{fg}p \leq \pnorm{f}p \cdot \pnorm{g}q
+.\end{align*}
 
 ### b
 Prove Minkowski's Inequality:
