--- a/Real Analysis/Review Doc/sections/91_1_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/91_1_Fall_2019_Exam_2.md
@@ -121,7 +121,7 @@ Proof
     .\end{align*}
 
 
-## 4: Lp Spaces
+## 4: $L^p$ Spaces
 
 
 ### a
@@ -154,18 +154,18 @@ m\qty{\theset{f\inv(1)}}
 and characterize the functions of each type
 
 Proof
-:
-\begin{align*}
-\int f^p 
-&= \int_{x \leq 1} f^p + \int_{x=1}f^p + \int_{x\geq 1} f^p\\
-&= \int_{x \leq 1} f^p + \int_{x=1}1 + \int_{x\geq 1} f^p \\
-&= \int_{x \leq 1} f^p + m(\theset{f = 1}) + \int_{x\geq 1} f^p \\
-&\converges{p\to\infty}\to 0  + m(\theset{f = 1}) + 
-\begin{cases} 
-0 & m(\theset{x\geq 1}) = 0 \\ 
-\infty & m(\theset{x\geq 1}) > 0.
-\end{cases}
-\end{align*}
+:   \hfill
+    \begin{align*}
+    \int f^p 
+    &= \int_{x \leq 1} f^p + \int_{x=1}f^p + \int_{x\geq 1} f^p\\
+    &= \int_{x \leq 1} f^p + \int_{x=1}1 + \int_{x\geq 1} f^p \\
+    &= \int_{x \leq 1} f^p + m(\theset{f = 1}) + \int_{x\geq 1} f^p \\
+    &\converges{p\to\infty}\to 0  + m(\theset{f = 1}) + 
+    \begin{cases} 
+    0 & m(\theset{x\geq 1}) = 0 \\ 
+    \infty & m(\theset{x\geq 1}) > 0.
+    \end{cases}
+    \end{align*}
 
 
 ## 5: Dual Spaces
@@ -248,15 +248,6 @@ $$
 
 See Problem Set 5.
 
-**Heine-Cantor theorem:**
-Every continuous function on a compact set is uniformly continuous.
-
-Uniform continuity:
-
-\begin{align*}
-    &\forall \varepsilon \quad \exists \delta(\varepsilon) \mid \quad \forall x, y, \quad \abs{x - y} < \delta \implies \abs{f(x) - f(y)} < \varepsilon \\
- \iff &\forall \varepsilon \quad \exists \delta(\varepsilon) \mid \quad \forall x, y, \quad \abs{y} < \delta \implies \abs{f(x-y) - f(y)} < \varepsilon \\
-.\end{align*}
 
 Fubini-Tonelli interchange of integrals, where the change of bounds becomes very important.
 
