/ ‘Real Analysis/Review Doc/sections/91_1_Fall_2019_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/91_1_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/91_1_Fall_2019_Exam_2.md
@@ -157,9 +157,9 @@ Proof
 :   \hfill
     \begin{align*}
     \int f^p 
-    &= \int_{x \leq 1} f^p + \int_{x=1}f^p + \int_{x\geq 1} f^p\\
-    &= \int_{x \leq 1} f^p + \int_{x=1}1 + \int_{x\geq 1} f^p \\
-    &= \int_{x \leq 1} f^p + m(\theset{f = 1}) + \int_{x\geq 1} f^p \\
+    &= \int_{x < 1} f^p + \int_{x=1}f^p + \int_{x > 1} f^p\\
+    &= \int_{x < 1} f^p + \int_{x=1}1 + \int_{x > 1} f^p \\
+    &= \int_{x < 1} f^p + m(\theset{f = 1}) + \int_{x > 1} f^p \\
     &\converges{p\to\infty}\to 0  + m(\theset{f = 1}) + 
     \begin{cases} 
     0 & m(\theset{x\geq 1}) = 0 \\ 
