--- a/Real Analysis/Review Doc/sections/91_1_Fall_2019_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/91_1_Fall_2019_Exam_2.md
@@ -165,7 +165,9 @@ Proof
     0 & m(\theset{x\geq 1}) = 0 \\ 
     \infty & m(\theset{x\geq 1}) > 0.
     \end{cases}
-    \end{align*} \todo{Justify passing limit into integrals.}
+    \end{align*} 
+
+\todo{Justify passing limit into integrals.}
 
 
 ## 5: Dual Spaces
