--- a/Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md
@@ -3,3 +3,7 @@
 ## 1
 
 > Note: (a) is a repeat.
+
+- Let $\Lambda\in L^2(X)\dual$.
+  - Show that $M\definedas \theset{f\in L^2(X) \suchthat \Lambda(f) = 0} \subseteq L^2(X)$ is a closed subspace.
+  - Prove that there exists a unique $g\in L^2(X)$ such that $\Lambda(f) = \int_X g \bar f$.
