/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/90_Extra_Problems.md’ / ‘Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md
@@ -7,3 +7,19 @@
 - Let $\Lambda\in L^2(X)\dual$.
   - Show that $M\definedas \theset{f\in L^2(X) \suchthat \Lambda(f) = 0} \subseteq L^2(X)$ is a closed subspace, and $L^2(X) = M \oplus M\perp$.
   - Prove that there exists a unique $g\in L^2(X)$ such that $\Lambda(f) = \int_X g \bar f$.
+
+## 2
+
+a. In parts:
+  - Given a definition of $L^\infty(\RR^n)$.
+  - Verify that $\norm{\wait}_\infty$ defines a norm on $L^\infty(\RR^n)$.
+  - Carefully proved that $(L^\infty(\RR^n), \norm{\wait}_\infty)$ is a Banach space.
+
+b. Prove that for any measurable $f:\RR^n \to \CC$,
+\begin{align*}
+L^1(\RR^n) \intersect L^\infty(\RR^n) \subset L^2(\RR^n) \qtext{and} \norm{f}_2 \leq \norm{f}_1^{1\over 2} \cdot \norm{f}_\infty^{1\over 2}
+.\end{align*}
+
+## 3
+
+a. Prove that if $f, g: \RR^n\to \CC$ is both measurable then $F(x, y) \definedas f(x)$ and $h(x, y)\definedas f(x-y) g(y)$ is measurable on $\RR^n\cross \RR^n$.
