--- a/Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md
@@ -23,3 +23,12 @@ L^1(\RR^n) \intersect L^\infty(\RR^n) \subset L^2(\RR^n) \qtext{and} \norm{f}_2 
 ## 3
 
 a. Prove that if $f, g: \RR^n\to \CC$ is both measurable then $F(x, y) \definedas f(x)$ and $h(x, y)\definedas f(x-y) g(y)$ is measurable on $\RR^n\cross \RR^n$.
+
+b. Show that if $f\in L^1(\RR^n) \intersect L^\infty(\RR^n)$ and $g\in L^1(\RR^n)$, then $f\ast g \in L^1(\RR^n) \intersect L^\infty(\RR^n)$ is well defined, and carefully show that it satisfies the following properties:
+\begin{align*}
+\norm{f\ast g}_\infty &\leq \norm{g}_1 \norm{f}_\infty
+\norm{f\ast g}_1      &\leq \norm{g}_1 \norm{f}_1
+\norm{f\ast g}_2      &\leq \norm{g}_1 \norm{f}_2
+.\end{align*}
+
+> Hint: first show $\abs{f\ast g}^2 \leq \norm{g}_1 \qty{ \abs{f}^2 \ast \abs{g}}$.
