/ ‘Real Analysis/Review Doc/Real_Analysis_Qual_Notes.pdf’ / ‘Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md’

--- a/Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md
+++ b/Real Analysis/Review Doc/sections/91_3_Fall_2014_Exam_2.md
@@ -32,3 +32,9 @@ b. Show that if $f\in L^1(\RR^n) \intersect L^\infty(\RR^n)$ and $g\in L^1(\RR^n
 .\end{align*}
 
 > Hint: first show $\abs{f\ast g}^2 \leq \norm{g}_1 \qty{ \abs{f}^2 \ast \abs{g}}$.
+
+## 4 (Weierstrass Approximation Theorem)
+
+> Note: (a) is a repeat.
+
+Let $f: [0, 1]\to \RR$ be continuous, and prove the Weierstrass approximation theorem: for any $\eps> 0$ there exists a polynomial $P$ such that $\norm{f - P}_{\infty} < \eps$.
