/ ‘Real Analysis/UGA Solutions/sections/01_2020 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/01_2020 Spring.md
@@ -392,7 +392,15 @@ and now use the fact that the function is even so $\int_0^\infty f = {1\over 2} 
 
 Justifying the DCT:
 
-- ??? (Todo)
+- Apply Bernoulli's inequality: 
+\begin{align*}
+{1 + {x^2\over n}}^{n+1} \geq {1 + {x^2\over n}}\qty{1 + x^2} \geq {1 + x^2}
+,\end{align*}
+  where the last inequality follows from the fact that $1 + {x^2 \over n} \geq 1$
+
+\todo{Flesh out}
+
+\todo{}
 
 
 ## 6 
