--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -4,12 +4,12 @@
 
 ## 1
 
-We'll show a stronger statement: $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
+- Show a stronger statement: $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
 
-We can use that fact that $x, y > c \implies xy > c^2 \implies \frac{1}{xy} < \frac 1 {c^{2}}$.
+- Use that fact that $x, y > c \implies xy > c^2 \implies \frac{1}{xy} < \frac 1 {c^{2}}$.
 
-Letting $\varepsilon$ be arbitrary, choose $\delta < \varepsilon c^2$.
-Then
+- Letting $\varepsilon$ be arbitrary, choose $\delta < \varepsilon c^2$.
+- Then
 \begin{align*}
 \abs{f(x) - f(y)}
 &= \abs{\frac 1 x - \frac 1 y} \\
@@ -18,14 +18,18 @@ Then
 &< \frac{\delta}{c^2} \\
 &< \varepsilon
 ,\end{align*}
+  which shows uniform continuity since $\delta$ does not depend on $x$ or $y$.
 
-which shows uniform continuity since $\delta$ does not depend on $x$ or $y$.
+- To see that $f$ is not uniformly continuous when $c=0$, let $\varepsilon < 1$ be arbitrary.
 
-To see that $f$ is not uniformly continuous when $c=0$, let $\varepsilon < 1$ be arbitrary.
-
-Let $x_n = \frac 1 n$.
-Then choose $n$ large enough such that $\abs{x_n - x_{n+1}} = \frac 1 n - \frac 1 {n+1} < \delta$.
-Then just note that $f(x_n) = n$ and thus $\abs{f(x_n) - f(x_{n+1})} = n - (n+1) = 1 > \varepsilon$. 
+- Let $x_n = \frac 1 n$ for $n\geq 1$.
+- Choose $n$ large enough such that $\abs{x_n - x_{n+1}} = \frac 1 n - \frac 1 {n+1} < \delta$.
+  - Why this can be done: by the archimedean property of $\RR$, choose $n$ such that ${1\over n} < \eps$.
+  - Then
+  \begin{align*}
+  {1 \over n} - {1\over n+1} = {1 \over n(n+1)} \leq {1\over n} < \eps \quad\text{since }n+1 > 1
+  .\end{align*}
+- Note $f(x_n) = n$ and thus $$\abs{f(x_n) - f(x_{n+1})} = n - (n+1) = 1 > \varepsilon.$$
 
 
 ## 2
