/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -1,10 +1,12 @@
 #  Fall 2018
 
-> Note: this is considered....not the most useful or representative exam of all time.
-
 ## 1
 
-- Show a stronger statement: $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
+Concepts used:
+
+- Uniform continuity.
+
+Show a stronger statement: $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
 
 - Use that fact that $x, y > c \implies xy > c^2 \implies \frac{1}{xy} < \frac 1 {c^{2}}$.
 
@@ -20,8 +22,11 @@
 ,\end{align*}
   which shows uniform continuity since $\delta$ does not depend on $x$ or $y$.
 
-- To see that $f$ is not uniformly continuous when $c=0$, let $\varepsilon < 1$ be arbitrary.
+To see that $f$ is not uniformly continuous when $c=0$:
 
+> Note: negating uniform continuity says $\exists \eps > 0$ such that $\forall \delta(\eps)$ there exist $x, y$ such that $\abs{x-y} < \delta$ *and* $\abs{f(x) - f(y)} > \eps$.
+
+- Let $\varepsilon < 1$ .
 - Let $x_n = \frac 1 n$ for $n\geq 1$.
 - Choose $n$ large enough such that $\abs{x_n - x_{n+1}} = \frac 1 n - \frac 1 {n+1} < \delta$.
   - Why this can be done: by the archimedean property of $\RR$, choose $n$ such that ${1\over n} < \eps$.
